# golf-cart-led-controller-remote

./: CMakeLists.txt  README.md  sdkconfig
components/: lv_conf.h
components/lvgl_esp32_drivers/i2c_manager/: i2c_manager.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  ssd1306.c
components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  ft6x36.c
components/serial_console/: CMakeLists.txt  serial_console.c  serial_console.h
main/: CMakeLists.txt  cmd_axp192.c  cmd_axp192.h  cmd_ble.c  cmd_ble.h  example_ble_sec_gattc_demo.c  example_ble_sec_gattc_demo.h  gui_support.h  main.cpp
